<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/top100"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/top"
        android:textColor="@color/Aquamarine"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/feed"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/feed"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/live"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/live"
        android:textColor="@color/Black"
        android:textSize="18sp" />

</LinearLayout>